fix logo distortion on zoom + remove bottom padding

--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -2,6 +2,14 @@ body {
     background-color: lightgray;
 }
 
+.header-area .header-centerbar {
+    padding-bottom: 0px;
+}
+
+.logo img {
+    all: revert;
+}
+
 ::placeholder {
     opacity: 0.3 !important;
 }
